# financial-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
financial_assistant/: config.py  main.py
financial_assistant/agents/: advisor_agent.py  budget_agent.py  data_agent.py  insights_agent.py  orchestrator.py
financial_assistant/db/: client.py  user_context.py
financial_assistant/routers/: categorize.py  chat.py  deps.py
financial_assistant/tools/: advisor_tools.py  budget_tools.py  insights_tools.py  supabase_tools.py
supabase/: config.toml  drop_all.sql  synthetic_data.csv
supabase/migrations/: 20260321000001_create_enums.sql  20260321000002_create_tables.sql  20260321000003_create_balance_view.sql  20260321000004_seed_categories.sql  20260321000005_add_auth.sql
tests/: conftest.py  test_categorize.py  test_chat.py  test_deps.py  test_health.py
tests/tools/: test_budget_tools.py  test_supabase_tools.py
web/: Dockerfile  package-lock.json  package.json  vitest.config.ts
web/public/: template.csv
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(auth)/: layout.tsx
web/src/app/budgets/: page.tsx
web/src/app/chat/: page.tsx
web/src/app/import/: page.tsx
web/src/components/: AIStatusBadge.tsx  BudgetCard.tsx  BudgetForm.tsx  ChatInterface.tsx  ImportReviewTable.tsx  MetricCard.tsx  TopNav.tsx  TransactionForm.tsx  TransactionTable.tsx
web/src/lib/: ai-client.ts  budget-utils.test.ts  budget-utils.ts  import-parser.ts  supabase.ts
web/src/types/: database.ts  ofx-js.d.ts
(+6 files in other folders)
